# dhc_sim

./: .gitignore  pyproject.toml
demo/: 00_prepare_citydb.ipynb  01_prepare_citygml.ipynb  02_generate_building_models.ipynb  03_generate_network.ipynb  04_integrate_buildings_and_network.ipynb
demo/data/timeseries/: ground_temperature.csv  ground_temperature.json  heat_input.csv  supply_temperature.csv  supply_temperature.json
demo/data/weather_files/: AUT_WI_Wien_110800_TMYx_2021.epw  AUT_WI_Wien_110800_TMYx_2021.mos
demo/output/modelica/Heat_network_open_loop_dT_var/: Heat_network_open_loop_dT_var.mat  Heat_network_open_loop_dT_var.mo  Heat_network_open_loop_dT_var_inputs.mo  package.mo  package.order
demo/output/modelica/teaser/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse47/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse49/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse51/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse52_1/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse52_2/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse54/: package.mo  package.order
demo/output/modelica/teaser/B1180AnastasiusGrnGasse56/: package.mo  package.order
demo/output/uesgraph/pino/: demo_pino.json
dhc_sim/: __init__.py  utils.py
dhc_sim/processing/: __init__.py  citygml.py  modelica.py  network.py
dhc_sim/timeseries/: __init__.py  loader.py  timeseries.py
(+247 files in other folders)
